# peer-did-python

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codestyle.yml  release.yml  tests.yml  verify.yml
demo/: demo.py
docs/: release.md  testing.md
peerdid/: __init__.py  did_doc.py  dids.py  errors.py  keys.py  peer_did.py  peer_did_creator.py  peer_did_resolver.py  peer_did_utils.py  storage.py  types.py
peerdid/core/: did_doc.py  did_doc_types.py  jwk_okp.py  multibase.py  multicodec.py  peer_did_helper.py  peer_did_validation.py  storage.py  utils.py  validation.py
tests/: demo.py  peer_did_creator_tests.py  peer_did_resolver_tests.py  storage_tests.py  test_create_peer_did_numalgo_0.py  test_create_peer_did_numalgo_1.py  test_create_peer_did_numalgo_2.py  test_did_doc.py  test_peer_did.py  test_peer_did_helpers.py  test_peer_did_resolving.py  test_peer_did_utils.py  test_resolve_peer_did_numalgo_0.py  test_resolve_peer_did_numalgo_1.py  test_resolve_peer_did_numalgo_2.py  test_storage.py  test_vectors.py
