[metadata]
name = peerdid
version = attr: peerdid.__version__
url = https://github.com/sicpa-dlab/peer-did-python
project_urls =
    #    Documentation =
    Source Code = https://github.com/sicpa-dlab/peer-did-python
    Issue Tracker = https://github.com/sicpa-dlab/peer-did-python/issues/
license = Apache-2.0
author = SICPA
author_email = DLCHOpenSourceContrib@sicpa.com
# maintainer =
# maintainer_email =
description = PeerDID for Python
long_description = file: README.md
long_description_content_type = text/markdown
# TODO
classifiers =
    # Development Status ::
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    # Topic ::

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
exclude =
    tests
    tests.*
    docs
